# OLIreverb

./: CMakeLists.txt  LICENSE  README.md
resource/: Info.plist
source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
